--- a/app/src/main/res/layout/fragment_text.xml
+++ b/app/src/main/res/layout/fragment_text.xml
@@ -10,6 +10,7 @@
         android:id="@+id/resultText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textColorHighlight="@color/greenLight"
         android:textIsSelectable="true"/>
 
 </RelativeLayout>
