--- a/app/src/main/res/layout/save_object.xml
+++ b/app/src/main/res/layout/save_object.xml
@@ -22,8 +22,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content">
             <TextView
-                android:id="@+id/linkText"
+                android:id="@+id/nameText"
                 android:layout_weight="1"
+                android:textStyle="bold"
                 android:singleLine="true"
                 android:layout_width="match_parent"
                 android:layout_height="0dp" />
