--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/side_nav_bar"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -10,19 +10,22 @@
     android:orientation="vertical"
     android:gravity="bottom">
 
+    <TextView
+        android:id="@+id/versionText"
+        android:text="@string/app_name"
+        android:singleLine="true"
+        android:layout_marginBottom="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <LinearLayout
-        android:orientation="horizontal"
+        android:id="@+id/linkList"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/versionText"
-            android:text="@string/app_name"
-            android:singleLine="true"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" />
     </LinearLayout>
 
+    <!--
     <ScrollView
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
@@ -33,12 +36,38 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <!--
-            <com.docm.httprequest.object.SaveObject
-                app:url="http://google.com"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-            -->
         </LinearLayout>
     </ScrollView>
+    -->
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="14dp"
+        android:background="@color/greenDark"/>
+
+    <TextView
+        android:id="@+id/playMauriacusText"
+        android:text="@string/play_mauriacus_game"
+        android:singleLine="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp" />
+
+    <TextView
+        android:id="@+id/linkEmailText"
+        android:text="@string/link_email"
+        android:singleLine="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp" />
+
+    <TextView
+        android:id="@+id/linkFacebookText"
+        android:text="@string/link_facebook"
+        android:singleLine="true"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="14dp" />
+
 </LinearLayout>
